--- a/muduo/net/protorpc/CMakeLists.txt
+++ b/muduo/net/protorpc/CMakeLists.txt
@@ -21,6 +21,10 @@ add_library(muduo_protorpc RpcChannel.cc RpcServer.cc)
 set_target_properties(muduo_protorpc PROPERTIES COMPILE_FLAGS "-Wno-error=shadow")
 target_link_libraries(muduo_protorpc muduo_protorpc_wire muduo_protobuf_codec muduo_net protobuf z)
 
+if(TCMALLOC_LIBRARY)
+  target_link_libraries(muduo_protorpc tcmalloc_and_profiler)
+endif()
+
 install(TARGETS muduo_protorpc_wire muduo_protorpc DESTINATION lib)
 install(TARGETS muduo_protorpc_wire_cpp11 DESTINATION lib)
 
